errores corregidos, compilacion con maven correcta y tests funcionales